# test-yew-tutorial

./: Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  pages.yml
pages/: index.html
src/: main.rs  static_data.rs
