[package]
name = "yew-tuto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", default-features = false, features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
wasm-bindgen-futures = "0.4"
